--- a/opgave1/MainWindow.xaml
+++ b/opgave1/MainWindow.xaml
@@ -7,6 +7,73 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="264*"></ColumnDefinition>
+            <ColumnDefinition Width="221*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Label Height="28" Margin="0,8,0,0" Name="label1" VerticalAlignment="Top" HorizontalAlignment="Left" >Id</Label>
+        <Label Height="28" Margin="0,37,0,0" Name="label2" VerticalAlignment="Top" HorizontalAlignment="Left" >CodeName</Label>
+        <Label Height="28" Margin="0,72,0,0" Name="label3" VerticalAlignment="Top" HorizontalAlignment="Left" >Speciality</Label>
+        <Label Height="28" Margin="0,107,0,0" Name="label4" VerticalAlignment="Top" HorizontalAlignment="Left" >Assignment</Label>
+        <TextBox Height="23" 
+                 Margin="100,10,0,0" 
+                 Name="textBox1" 
+                 VerticalAlignment="Top" 
+                 HorizontalAlignment="Left" 
+                 Width="58"
+                 Text="{Binding Path=ID}"/>
+        <TextBox Height="23" 
+                 Margin="100,39,14,0" 
+                 Name="textBox2" 
+                 VerticalAlignment="Top"
+                 Text="{Binding Path=CodeName}"/>
+        <TextBox Height="23" 
+                 Margin="100,72,14,0" 
+                 Name="textBox3" 
+                 VerticalAlignment="Top" 
+                 Text="{Binding Path=Specialty}"/>
+        <TextBox Margin="100,109,14,0" 
+                 Name="textBox4" 
+                 Height="82" 
+                 AcceptsReturn="True"
+                 TextWrapping="Wrap"
+                 VerticalAlignment="Top"
+                 Text="{Binding Path=Assignment}"/>
+        <ListBox Grid.Column="1" 
+                 HorizontalAlignment="Left" 
+                 Height="399" 
+                 Margin="10,10,0,0" 
+                 VerticalAlignment="Top" 
+                 Width="341"
+                 ItemsSource="{Binding }"
+                 DisplayMemberPath="CodeName"
+                 IsSynchronizedWithCurrentItem="True"/>
+        <Button Height="23" 
+                Margin="100,212,0,0" 
+                VerticalAlignment="Top" 
+                HorizontalAlignment="Left"
+                x:Name="btnBack" 
+                Content="&lt;" 
+                Width="75"
+                Click="BtnBack_Click"
+                />
+        <Button Height="23" 
+                Margin="185,212,0,0" 
+                VerticalAlignment="Top" 
+                HorizontalAlignment="Left"
+                x:Name="btnForward"  
+                Width="75"
+                Content="&gt;" 
+                Click="BtnForward_Click"
+                />
+        <Button Height="23" 
+                Margin="100,251,0,0" 
+                VerticalAlignment="Top" 
+                HorizontalAlignment="Left"
+                Width="75"
+                x:Name="btnAddNew" 
+                Content="Add New" 
+                Click="BtnAddNew_Click"
+                />
     </Grid>
 </Window>
