--- a/opgave1/MainWindow.xaml
+++ b/opgave1/MainWindow.xaml
@@ -3,11 +3,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:opgave"
+        xmlns:vm="clr-namespace:opgave1"
         mc:Ignorable="d"
         Title="LollernLorteApp" Height="450" Width="800">
     <Window.DataContext>
-        <local:MainWindowViewModel/>
+        <vm:MainWindowViewModel/>
     </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -24,31 +24,32 @@
                  VerticalAlignment="Top" 
                  HorizontalAlignment="Left" 
                  Width="58"
-                 Text="{Binding Path=ID}"/>
+                 Text="{Binding Path=CurrentAgent.ID}"/>
         <TextBox Height="23" 
                  Margin="100,39,14,0" 
                  Name="textBox2" 
                  VerticalAlignment="Top"
-                 Text="{Binding Path=CodeName}"/>
+                 Text="{Binding Path=CurrentAgent.CodeName}"/>
         <TextBox Height="23" 
                  Margin="100,72,14,0" 
                  Name="textBox3" 
                  VerticalAlignment="Top" 
-                 Text="{Binding Path=Specialty}"/>
+                 Text="{Binding Path=CurrentAgent.Specialty}"/>
         <TextBox Margin="100,109,14,0" 
                  Name="textBox4" 
                  Height="82" 
                  AcceptsReturn="True"
                  TextWrapping="Wrap"
                  VerticalAlignment="Top"
-                 Text="{Binding Path=Assignment}"/>
-        <ListBox Grid.Column="1" 
+                 Text="{Binding Path=CurrentAgent.Assignment}"/>
+        <ListBox Grid.Column="1"
+                 Name="lbxAgents"
                  HorizontalAlignment="Left" 
                  Height="399" 
                  Margin="10,10,0,0" 
                  VerticalAlignment="Top" 
                  Width="341"
-                 ItemsSource="{Binding }"
+                 ItemsSource="{Binding Path=Agents}"
                  DisplayMemberPath="CodeName"
                  IsSynchronizedWithCurrentItem="True"/>
         <Button Height="23" 
